fixed/nedpoints-some-issues
